--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/Aleksander1105/zadanie_17_3/issues"
   },
   "homepage": "https://github.com/Aleksander1105/zadanie_17_3#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3"
   }
